[예진] 회원목록가져오기 수정