@@ -2,6 +2,7 @@ package com.lec.packages.controllers;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -17,16 +18,14 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
+import com.lec.packages.domain.Member;
 import com.lec.packages.dto.ClubBoardAllListDTO;
 import com.lec.packages.dto.ClubBoardDTO;
 import com.lec.packages.dto.ClubDTO;
-import com.lec.packages.dto.ClubMemberDTO;
 import com.lec.packages.dto.MemberSecurityDTO;
 import com.lec.packages.dto.PageRequestDTO;
 import com.lec.packages.dto.PageResponseDTO;
-import com.lec.packages.repository.ClubMemberRepository;
 import com.lec.packages.service.ClubService;
-import com.lec.packages.service.MemberService;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.Valid;
@@ -45,8 +44,6 @@ public class ClubController {
 	
 	@Autowired
 	private final ClubService clubService;
-
-	private final ClubMemberRepository clubMemberRepository;
 	
 	@PreAuthorize("hasRole('USER')")
 	@GetMapping("/club_create")
@@ -72,23 +69,16 @@ public class ClubController {
 		MemberSecurityDTO principal = (MemberSecurityDTO) authentication.getPrincipal();
 		model.addAttribute("principal", principal);
 		
-		PageResponseDTO<ClubMemberDTO> clubMemberdto = clubService.clubMemberList(clubCode, pageRequestDTO);
-		model.addAttribute("clubMemberdto", clubMemberdto);
-		
-		// 클럽상세보기에서 3명만보여주기 제한
-		List<ClubMemberDTO> limitmember = clubMemberdto.getDtoList()
-													   .stream()
-													   .limit(3)
-													   .peek(dto -> {
-													       String picture = clubService.findMemberPicture(dto.getMemId())
-													    		   					 .stream()
-													                                 .filter(p -> p != null && !p.isEmpty())
-													                                 .findFirst()
-													                                 .orElse("fitlink.png");
-													        dto.setMemberPicture(picture);
-													    })
-													   .toList();
-        model.addAttribute("limitmember", limitmember);
+		// 클럽상세보기에서 회원3명만 보여지기 제한
+		List<Member> clubmembers = clubService.findMemberDetails(clubCode)
+											  .stream()
+											  .limit(3)
+/*											  .peek(m -> {
+												  if (m.getMemPicture() == null || m.getMemPicture().isEmpty())
+													  m.setMemPicture("/img/upload/img_profile.png");
+											  }) */
+											  .collect(Collectors.toList());
+        model.addAttribute("clubmembers", clubmembers);
         
         Map<String, Integer> memberCount = clubService.membercount();
 		model.addAttribute("memberCount", memberCount);
@@ -114,11 +104,17 @@ public class ClubController {
 			, RedirectAttributes redirectAttributes) {
 		String memId = authentication.getName();
 		
-		clubService.join(memId, clubCode);
+		boolean isJoinMember = clubService.isJoinMember(memId, clubCode);
+		if (isJoinMember) {
+			redirectAttributes.addFlashAttribute("message", "이미 가입된 회원입니다.");
+			return "redirect:/club/club_detail?clubCode=" + clubCode;
+		}
 		
+		clubService.join(memId, clubCode);
+		redirectAttributes.addFlashAttribute("message", "클럽에 성공적으로 가입되었습니다.");
 		return "redirect:/club/club_detail?clubCode=" + clubCode;
 	}
-	
+		
 	@GetMapping("/club_member")
 	public String clubMember(@RequestParam("clubCode") String clubCode
 			, PageRequestDTO pageRequestDTO
@@ -129,19 +125,9 @@ public class ClubController {
         ClubDTO clubDTO = clubService.detail(clubCode);
         model.addAttribute("clubdto", clubDTO);
 
-        PageResponseDTO<ClubMemberDTO> responseDTO = clubService.clubMemberList(clubCode, pageRequestDTO);
-        responseDTO.getDtoList().forEach(dto -> {
-										String picture = clubService.findMemberPicture(dto.getMemId())
-																	.stream()
-											                       .filter(p -> p != null && !p.isEmpty())
-											                       .findFirst()
-											                       .orElse("fitlink.png");
-											dto.setMemberPicture(picture);
-											});
-        
+        PageResponseDTO<Member> responseDTO = clubService.findMemberAll(clubCode, pageRequestDTO);
         model.addAttribute("responseDTO", responseDTO);
         
-        // int memberCount = clubMemberRepository.countByClubCode(clubCode).orElse(0);
         Map<String, Integer> memberCount = clubService.membercount();
         model.addAttribute("memberCount", memberCount);
         
